--- a/client/src/assets/i18n/de.po
+++ b/client/src/assets/i18n/de.po
@@ -265,6 +265,9 @@ msgstr ""
 "Sollen alle Stimmen wirklich anonymisiert werden? Dies kann nicht rückgängig"
 " gemacht werden."
 
+msgid "Are you sure you want to clear all messages in this chat?"
+msgstr "Sollen wirklich alle Nachrichten in diesem Chat gelöscht werden?"
+
 msgid "Are you sure you want to clear all speakers of all lists?"
 msgstr "Sollen wirklich alle Redner/innen von allen Listen entfernt werden?"
 
@@ -295,6 +298,9 @@ msgstr ""
 msgid "Are you sure you want to delete this change recommendation?"
 msgstr "Soll diese Änderungsempfehlung wirklich gelöscht werden?"
 
+msgid "Are you sure you want to delete this chat group?"
+msgstr "Soll diese Chat-Gruppe wirklich gelöscht werden?"
+
 msgid "Are you sure you want to delete this comment field?"
 msgstr "Soll dieses Kommentarfeld wirklich gelöscht werden?"
 
@@ -309,6 +315,9 @@ msgstr "Soll diese Datei wirklich gelöscht werden?"
 
 msgid "Are you sure you want to delete this group?"
 msgstr "Soll diese Gruppe wirklich gelöscht werden?"
+
+msgid "Are you sure you want to delete this message?"
+msgstr "Soll die ausgewählte Nachricht wirklich gelöscht werden?"
 
 msgid "Are you sure you want to delete this motion block?"
 msgstr "Soll dieser Antragsblock wirklich gelöscht werden?"
@@ -495,6 +504,9 @@ msgstr "Darf Anträge erstellen"
 msgid "Can manage agenda"
 msgstr "Darf die Tagesordung verwalten"
 
+msgid "Can manage chat"
+msgstr "Darf den Chat verwalten"
+
 msgid "Can manage comments"
 msgstr "Darf Kommentare verwalten"
 
@@ -658,6 +670,9 @@ msgstr "Geänderte Fassung in Zeile"
 msgid "Changes"
 msgstr "Änderungen"
 
+msgid "Chat"
+msgstr "Chat"
+
 msgid "Check for updates"
 msgstr "Auf Updates prüfen"
 
@@ -676,6 +691,9 @@ msgstr "Hintergrundfarbe Bauchbinde"
 
 msgid "Chyron font color"
 msgstr "Schriftfarbe Bauchbinde"
+
+msgid "Clear"
+msgstr "Bereinigen"
 
 msgid "Clear all"
 msgstr "Alle löschen"
@@ -787,6 +805,9 @@ msgstr "Erstellen"
 
 msgid "Create final print template"
 msgstr "Beschluss-Druckvorlage erstellen"
+
+msgid "Create new chat group"
+msgstr "Neue Chat-Gruppe anlegen"
 
 msgid "Create user"
 msgstr "Nutzer anlegen"
@@ -1859,6 +1880,9 @@ msgstr "Bisher keine Änderungsempfehlungen"
 msgid "No changes at the text."
 msgstr "Keine Änderung am Text."
 
+msgid "No chat groups available"
+msgstr "Keine Chat-Gruppen vorhanden."
+
 msgid "No comment"
 msgstr "Kein Kommentar"
 
@@ -2511,6 +2535,9 @@ msgstr "Antragsteller/in auswählen oder suchen ..."
 
 msgid "Select paragraphs"
 msgstr "Absätze auswählen"
+
+msgid "Send"
+msgstr "Senden"
 
 msgid "Send invitation email"
 msgstr "Einladungs-E-Mail senden"
